Update CHANGELOG for ALPHA5